netbox/nginx-all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbox-nginx
  labels:
    frontend: netbox-nginx
spec:
  selector:
    matchLabels:
      frontend: netbox-nginx
  replicas: 1
  template:
    metadata:
      labels:
        frontend: netbox-nginx
    spec:
      containers:
      # - name: gatekeeper
      #   image: keycloak/keycloak-gatekeeper:7.0.0
      #   imagePullPolicy: IfNotPresent
      #   ports:
      #   - containerPort: 3000
      #     name: service
      #   args:
      #   - --config=/etc/secrets/gatekeeper.yaml
      #   - --redirection-url=https://netbox.home.lab
      #   - --upstream-url=http://127.0.0.1:80
      #   - --resources=uri=/*|roles=Admin
      #   volumeMounts:
      #     - name: gatekeeper-secrets
      #       mountPath: /etc/secrets
      - name: nginx
        image: nginx:1.12-alpine
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        command: ["nginx"]
        args: ["-c", "/etc/netbox-nginx/nginx.conf","-g", "daemon off;"] 
        volumeMounts:
        - name: netbox-static-files
          mountPath: /opt/netbox/netbox/static
        - name: netbox-nginx-config
          mountPath: /etc/netbox-nginx
        - name: private-ca-cert
          mountPath: /etc/ssl/certs/ca-certificates.crt
          subPath: tls.crt
          readOnly: false
      restartPolicy: Always
      volumes:
      - name: netbox-static-files
        persistentVolumeClaim:
          claimName: netbox-static-files
      - name: netbox-nginx-config
        configMap:
          name: netbox-nginx-conf
      - name: private-ca-cert
        configMap:
          name: private-ca-cert
      # - name: gatekeeper-secrets
      #   secret:
      #     secretName: gatekeeper
       
---
apiVersion: v1
kind: Service
metadata:
  name: netbox-nginx
  labels:
    frontend: netbox-nginx
spec:
  type: NodePort
  ports:
  - name: "80"
    port: 80
    targetPort: 80
  selector:
    frontend: netbox-nginx
