netbox/postgres-all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netbox-postgres
  labels:
    backend: netbox-postgres
spec:
  selector:
    matchLabels:
      backend: netbox-postgres
  replicas: 1
  template:
    metadata:
      labels:
        backend: netbox-postgres
    spec:
      containers:  
      - image: postgres:9.6-alpine
        imagePullPolicy: IfNotPresent
        name: postgres 
        ports:
        - containerPort: 5432
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: netbox-postgres
  labels:
    backend: netbox-postgres
spec:
  clusterIP: None
  ports:
  - name: headless
    port: 5432
    targetPort: 5432
  selector:
    backend: netbox-postgres
