netbox/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    name: netbox
  name: netbox
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "selfsigned"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/instance: forecastle
    forecastle.stakater.com/group: "Admin"
    forecastle.stakater.com/icon: "https://netbox.readthedocs.io/en/stable/netbox_logo.svg"
spec:
  tls:
  - hosts:
    - netbox.home.lab
    secretName: netbox-selfsigned-cert-tls
  rules:
  - host: netbox.home.lab
    http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: 80
